--- a/certify/src/CancelAccess.css
+++ b/certify/src/CancelAccess.css
@@ -1,9 +1,11 @@
-.center2 {
-    border: 2px solid grey;
-    background-color: rgb(255, 255, 255);
+.center24 {
+    /* border: 2px solid rgb(255, 254, 254);
+    background-color: rgb(199, 199, 199); */
     margin: auto;
     width: 50%;
-    padding-top: 50px;
-    /* padding: 10px; */
-    border-radius: 30px;
+    /* padding-top: 50px; */
+    padding: 50px;
+    margin-top: 50px;
+    border-radius: 10px;
+    box-shadow: 5px 10px 8px 10px #888888;
  }
