--- a/certify/src/Home.css
+++ b/certify/src/Home.css
@@ -1,10 +1,30 @@
 .center4 {
-    border: 2px solid grey;
-    background-color: rgb(250, 250, 250);
+    /* border: 2px solid rgb(255, 255, 255); */
+    /* background-color: rgb(214, 214, 214); */
+    opacity: 0.9;
     margin: auto;
     margin-top: 100px;
     width: 50%;
     padding-top: 50px;
     /* padding: 10px; */
-    border-radius: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 10px 8px 10px #888888;
  }
+
+  .button {
+    background-color: #000000; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+  }
+  .button2:hover {
+    box-shadow: 0 20px 20px 0 rgba(0, 0, 0, 0.24), 0 20px 80px 0 rgba(0, 0, 0, 0.19);
+  }
