--- a/certify/src/Navbar.css
+++ b/certify/src/Navbar.css
@@ -43,3 +43,18 @@
     transform: translateX(-100%); 
     }
     }
+    a{
+      padding-right: 300px;
+    }
+    li{
+      padding-right: 20px;
+    }
+    img{
+      padding-right: 20px;
+  
+    }
+    strong{
+      font-size: xx-large;
+    }
+    
+    
