--- a/certify/src/Share.css
+++ b/certify/src/Share.css
@@ -15,7 +15,7 @@ input{
     margin: 10px;
 }
 button{
-    margin: 10px;
+    margin: 40px;
 }
 .img-cont img {
     width: 200px;
@@ -23,4 +23,44 @@ button{
     border:3px solid black;
     border-radius: 10px;
     /* border-radius: 50%; */
+  }
+  .button {
+    margin-left: 40px;
+    display: inline-block;
+    border-radius: 4px;
+    background-color: #f4511e;
+    border: none;
+    color: #FFFFFF;
+    text-align: center;
+    font-size: 28px;
+    padding: 40px;
+    width: 200px;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+  }
+  
+  .button span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.5s;
+  }
+  
+  .button span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.5s;
+  }
+  
+  .button:hover span {
+    padding-right: 25px;
+  }
+  
+  .button:hover span:after {
+    opacity: 1;
+    right: 0;
   }
