--- a/certify/src/Upload.css
+++ b/certify/src/Upload.css
@@ -4,14 +4,16 @@
 
 .top {
     margin: 40px;
-    border: 2px solid grey;
-    background-color: rgb(247, 247, 247);
+    /* border: 2px solid rgb(255, 255, 255);
+    background-color: rgb(231, 181, 181); */
     /* margin-top: 30px; */
+    opacity: 0.9;
     margin: auto;
     width: 50%;
     padding-top: 50px;
     /* padding: 10px; */
-    border-radius: 30px;
+    border-radius: 10px;
+    box-shadow: 5px 10px 8px 10px #888888;
   }
   
   input[type="file"] {
@@ -20,42 +22,42 @@
   
   .choose {
     background-color: initial;
-    background-image: linear-gradient(-180deg, #15ffcc, #061f06);
+    background-image: linear-gradient(-180deg, #2f73af, #2b69ba);
     border-radius: 6px;
-    color: #0f0202;
+    color: #ffffff;
     padding: 5px 10px;
     border-radius: 6px;
     margin-right: 10px;
     padding-bottom: 10px;
   }
   .choose:hover {
-    box-shadow: rgba(38, 213, 29, 0.5) 0 3px 8px;
+    box-shadow: rgba(22, 226, 226, 0.5) 0 3px 8px;
   }
   .textArea {
-    color: rgb(5, 0, 0);
+    color: rgb(70, 11, 11);
   }
   
   .upload {
     border: 1px solid #7bf3eb;
-    background-color: #6fe1c1;
-    color: #070b0a;
+    background-color: #4e97bc;
+    color: #062920;
     padding: 5px 10px;
     border-radius: 6px;
     margin-left: 10px;
   }
   
   .upload:hover {
-    border: 1px solid #13aa52;
-    background-color: #a5efc1;
-    color: #000000;
+    border: 1px solid #457dd8;
+    background-color: #3c3aa4;
+    color: #ffffff;
     padding: 5px 10px;
   }
   
   .upload:disabled,
   .upload[disabled] {
-    border: 1px solid #000000;
-    background-color: #86f9db;
-    color: #666666;
+    border: 1px solid #1a0101;
+    background-color: #619bba;
+    color: #000000;
   }
   
   div {
