--- a/certify/src/Verify.css
+++ b/certify/src/Verify.css
@@ -1,6 +1,7 @@
 .center5 {
-    border: 2px solid grey;
-    background-color: rgb(255, 255, 255);
+    /* border: 2px solid grey; */
+    /* background-color: rgb(255, 255, 255); */
+    opacity: 0.9;
     margin-top: 200px;
     margin-left: 400px;
 
@@ -8,4 +9,22 @@
     padding-top: 50px;
     /* padding: 10px; */
     border-radius: 30px;
+    box-shadow: 5px 10px 8px 10px #888888;
  }
+ .button2:hover {
+    box-shadow: 0 12px 16px 0 rgba(92, 250, 108, 0.24), 0 17px 50px 0 rgba(255, 46, 46, 0.19);
+  }
+  .button {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+    -webkit-transition-duration: 0.4s; /* Safari */
+    transition-duration: 0.4s;
+  }
