final commit for now

--- a/certify/src/GiveAccess.css
+++ b/certify/src/GiveAccess.css
@@ -8,7 +8,7 @@
     margin-top: 50px;
 
     border-radius: 10px;
-    box-shadow: 5px 10px 8px 10px #888888;
+    /* box-shadow: 5px 7px 8px 7px #faf8f8; */
  }
  .button {
     display: inline-block;
