--- a/certify/src/CancelAccess.css
+++ b/certify/src/CancelAccess.css
@@ -7,5 +7,5 @@
     padding: 50px;
     margin-top: 50px;
     border-radius: 10px;
-    box-shadow: 5px 10px 8px 10px #888888;
+    /* box-shadow: 5px 10px 8px 10px #888888; */
  }
