--- a/certify/src/Upload.css
+++ b/certify/src/Upload.css
@@ -1,5 +1,5 @@
 .top1{
-  margin-top: 200px;
+  margin-top: 100px;
 }
 
 .top {
@@ -13,7 +13,7 @@
     padding-top: 50px;
     /* padding: 10px; */
     border-radius: 10px;
-    box-shadow: 5px 10px 8px 10px #888888;
+    /* box-shadow: 5px 7px 8px 7px #f6f6f6; */
   }
   
   input[type="file"] {
@@ -34,7 +34,7 @@
     box-shadow: rgba(22, 226, 226, 0.5) 0 3px 8px;
   }
   .textArea {
-    color: rgb(70, 11, 11);
+    color: rgb(249, 248, 248);
   }
   
   .upload {
@@ -57,7 +57,7 @@
   .upload[disabled] {
     border: 1px solid #1a0101;
     background-color: #619bba;
-    color: #000000;
+    color: #f7f1f1;
   }
   
   div {
