--- a/certify/src/ViewCertificates.css
+++ b/certify/src/ViewCertificates.css
@@ -1,6 +1,21 @@
 a{
   font-size: xx-small;
 }
+.imgcont{
+  /* font-size: medium;\
+   */
+   width: 200px;
+   background-color: white;
+   /* max-width: 300px; */
+   /* background-color: aqua; */
+}
+.imgcont > img{
+  /* font-size: medium;\
+   */
+  max-width:  200px;
+  max-height: 200px;
+   /* background-color: aqua; */
+}
   .image-list {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -59,6 +74,7 @@ a{
     max-width: 600px;
     overflow:visible;
     object-fit: fill;
+    /* background-color: aqua; */
   }
   
   .image-container img {
